Mon Jan 02 06:49:48 GMT 2006  Olly Betts <olly@survex.com>

	* csharp/util.i: Fixed to work!

Mon Jan 02 02:48:35 GMT 2006  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Don't use $(ASSEMBLY).cc for the generated C++
	  source.  It doesn't work everywhere, so it's confusing to use it
	  in just some places.
	* csharp/util.i: Implement operator== and operator!= for the iterator
	  classes so that comparisons with the end iterator work as expected.
	* csharp/SmokeTest.cs: Add test for this.
	* csharp/docs/bindings.html: Document.
 
Sat Dec 31 14:15:41 GMT 2005  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: Removed another reference to
	  SWIGTYPE_p_std__list_Tstd__string_t.

Sat Dec 31 13:25:31 GMT 2005  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: SWIGTYPE_p_std__list_Tstd__string_t.cs is no
	  longer generated.

Sat Dec 31 06:43:37 GMT 2005  Olly Betts <olly@survex.com>

	* configure.ac: Remove php/util.i from AC_CONFIG_FILES.

Sat Dec 31 06:42:41 GMT 2005  Olly Betts <olly@survex.com>

	* python/smoketest.py: Add more tests.

Sat Dec 31 06:41:21 GMT 2005  Olly Betts <olly@survex.com>

	* php/smoketest.php: Add more tests.

Sat Dec 31 06:40:24 GMT 2005  Olly Betts <olly@survex.com>

	* php/docs/bindings.html: Update documentation to include new
	  features.

Sat Dec 31 06:39:17 GMT 2005  Olly Betts <olly@survex.com>

	* php/Makefile.am: Clean up now php/util.i is no longer a generated
	  file.

Sat Dec 31 06:29:24 GMT 2005  Olly Betts <olly@survex.com>

	* php/util.i,php/util.i.in: Generating php/util.i from configure
	  is unnecessary and risks lost changes if you fail to notice
	  and edit the wrong file, so stop doing it.  Redo Xapian section in
	  phpinfo() to look more like most other modules; New PHP typemaps:
	  you can now construct a Query object from an array of strings or
	  Query objects (or a mixture).
	* php/util.i,python/util.i,xapian.i: Change the %extend method
	  Enquire::get_matching_terms() to generate the PHP/Python list