@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
-#DIST_SUBDIRS = examples
-#SUBDIRS = examples
+exampledatadir = $(datadir)/doc/$(PACKAGE)/csharp/examples
+dist_exampledata_DATA = SimpleIndex.cs # SimpleSearch.cs
 
-docdatadir = $(datadir)/doc/@PACKAGE@/csharp
+docdatadir = $(datadir)/doc/$(PACKAGE)/csharp
 dist_docdata_DATA = bindings.html
